   * Fixed a couple of ancient memory leaks: one "shared" during driver
     program initialization, and one specific to `dummy-ups` wind-down. [#2972]

 - `apc_modbus` driver updates:
   * The time stamp and inter-frame delay accounting was fixed, alleviating
     one of the problems reported in issue #2609. [PR #2982]
   * Fix missing variables due to mismatching format string. [PR #3013]

 - `bcmxcp` driver updates:
   * The latching on to a previous replace battery status was fixed, with its
     alarm state variable now correctly being reset; previously a factually
     replaced battery did not clear the alarm and the whole driver needed to
     be restarted. [issue #2999, PR #3002]

 - `clone`, `clone-outlet`, `nhs_ser` driver and `nutdrv_qx_ablerex`
   subdriver updates:
   * Refactored to follow modern handling of status and alarm conditions,
     aligning with current driver design practices. This includes fixing
     copy-paste related issues in alarm reporting and removing some alarm
     messages that should instead be reflected as status flags. [#2936]

 - `dummy-ups` driver updates:
   * A new instruction `ALARM` was added for the `Dummy Mode` operation
     of the driver, enabling simulation of UPS alarm states more closely
     in line with modern, real-world UPS driver implementations. This
     follows the updated principle of keeping alarm states decoupled from
     the `ups.status` variable, with alarms now raised via common alarm
     functions rather than direct manipulation. [issue #2928, PR #2936]

 - `nutdrv_qx` driver updates:
   * Introduced `innovart33` protocol support for Ippon Innova RT 3/3 topology
     UPSes. [#2938]
   * Updated `megatec` protocol for more detailed responses to `I` query
     which may return `ups.serial` (after a shorter `device.mfr`) and the
     `battery.runtime` (after a shorter `device.model`). Note that the
     expected response is shorter than in other dialects (38 vs. 39 bytes),